@@ -2,18 +2,17 @@ package com.geekbrains.backend.test;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
+import java.io.InputStream;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Properties;
-
 
 public abstract class FunctionalTest {
 
 
     public static Properties readProperties() throws Exception {
         Properties properties = new Properties();
-        Files.readAllLines(Path.of(
+        Files.readAllLines(Paths.get(
                 FunctionalTest.class.getResource("test.properties").toURI()))
                 .forEach(str -> {
                     String[] props = str.split("=");
@@ -24,9 +23,13 @@ public abstract class FunctionalTest {
 
     public String getStringResource(String name) throws IOException {
         String dir = getClass().getSimpleName();
-        byte[] bytes = getClass().getResourceAsStream(dir + "/" + name)
-                .readAllBytes();
-        return new String(bytes, StandardCharsets.UTF_8);
+        InputStream is = getClass().getResource(dir + "/" + name)
+                .openStream();
+        StringBuilder s = new StringBuilder();
+        while (is.available() > 0) {
+            s.append((char) is.read());
+        }
+        return s.toString();
     }
 
     public File getFileResource(String name) {
